Fix in full screen z-index and updated logos

--- a/web/src/main/resources/web/css/common.css
+++ b/web/src/main/resources/web/css/common.css
@@ -105,7 +105,7 @@ select:focus {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	z-index: 2;
+	z-index: 100;
 	background-color: rgba(255, 255, 255, 0.75);
 }
 
