--- a/web/src/main/resources/web/css/logos.css
+++ b/web/src/main/resources/web/css/logos.css
@@ -121,7 +121,7 @@
 }
 
 .q-pulse-logo::before {
-    background-image: url("https://raw.githubusercontent.com/nathros/nathros.github.io/master/images/cv/logos/qpluse.svg");
+    background-image: url("https://raw.githubusercontent.com/nathros/nathros.github.io/master/images/cv/logos/q-pulse.svg");
 }
 
 .freertos-logo::before {
